Create some front-end

--- a/index.html
+++ b/index.html
@@ -2,10 +2,39 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="refresh" content="0;URL=https://lampiaosec.github.io"> 
-		<title>LampiãoSec</title>
+		<title>LampiãoSec's Talks</title>
+		<style>
+				* {
+						background-color: #232323;
+						color: #ffffff;
+						text-align: center;
+						padding: 15px;
+						font-family: monospace;
+						font-size: 18px;
+				}
+				h1 {
+						font-size: 35px;
+						margin-bottom: 0px;
+				}
+				.author {
+						color: rgba(256,256,256,0.7);
+				}
+				li {
+						list-style-type: none;
+				}
+				a {
+						text-decoration: none;
+				}
+		</style>
 	</head>
 	<body>
-		<h1>You will be redirected ...</h1>
+		<h1>LampiãoSec's talks</h1>
+		<a href="https://lampiaosec.github.io"></h2>lampiaosec.github.io<h2></a>
+
+		<ul>
+			<li>
+				<a href="https://lampiaosec.github.io/talks/DNS-o-que-voce-precisa-saber/index.html">DNS - O que você precisa saber</a> - <span class="author">@gjuniioor</span>
+			</li>
+		</ul>
 	</body>
 </html>
