Change author tag

--- a/DNS-o-que-voce-precisa-saber/index.html
+++ b/DNS-o-que-voce-precisa-saber/index.html
@@ -40,7 +40,7 @@
 					<h1>DNS</h1>
 					<h2>O que você precisa saber</h2>
 					<br /></br />
-					<h3>gjuniioor</h3>
+					<a href="https://github.com/gjuniioor">gjuniioor</a>
 				</section>
 				<section>
 						<section>
