--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<a href="https://lampiaosec.github.io/talks/DNS-o-que-voce-precisa-saber/index.html">DNS - O que você precisa saber</a> - <span class="author">@gjuniioor</span>
 			</li>
 			<li>
-				<a href="lampiaosec.github.io/talks/Cripto/index.html">Criptografia - O básico das tretagem</a> - <span class="author">@nekoone</span>
+				<a href="http://lampiaosec.github.io/talks/Cripto/index.html">Criptografia - O básico das tretagem</a> - <span class="author">@nekoone</span>
 			</li>
 		</ul>
 	</body>
