Redirect to the main page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>LampiãoSec's Talks</title>
+		<meta http-equiv="refresh" content="0;URL=https://lampiaosec.github.io/#talks">
 		<style>
 				* {
 						background-color: #232323;
