Added link to Segurança em DNS

--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
 
 		<ul>
 			<li>
-				<a href="https://lampiaosec.github.io/talks/DNS-o-que-voce-precisa-saber/index.html">DNS - O que você precisa saber</a> - <span class="author">@gjuniioor</span>
+				<a href="DNS-o-que-voce-precisa-saber/index.html">DNS - O que você precisa saber</a> - <span class="author">@gjuniioor</span>
 			</li>
 			<li>
-				<a href="http://lampiaosec.github.io/talks/Cripto/index.html">Criptografia - O básico das tretagem</a> - <span class="author">@nekoone</span>
+				<a href="Cripto/index.html">Criptografia - O básico das tretagem</a> - <span class="author">@nekoone</span>
+			</li>
+			<li>
+				<a href="seguranca-em-dns-entenda-as-principais-brechas/index.html">Segurança em DNS - Entenda as principais brechas</a> - <span class="author">@gjuniioor</span>
 			</li>
 		</ul>
 	</body>
