Add 'Seguranca em DNS' presentation

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<a href="Cripto/index.html">Criptografia - O básico das tretagem</a> - <span class="author">@nekoone</span>
 			</li>
 			<li>
-				<a href="seguranca-em-dns-entenda-as-principais-brechas/index.html">Segurança em DNS - Entenda as principais brechas</a> - <span class="author">@gjuniioor</span>
+				<a href="seguranca-em-dns-entenda-as-principais-brechas.pdf">Segurança em DNS - Entenda as principais brechas</a> - <span class="author">@gjuniioor</span>
 			</li>
 		</ul>
 	</body>
