--- a/antes-de-mais-nada-voce-esta-seguro/index.html
+++ b/antes-de-mais-nada-voce-esta-seguro/index.html
@@ -107,6 +107,60 @@
                 	<section>
                 		<h2>Arquivos</h2>
                 	</section>
+                    <section>
+                    	<h3>Criptografia</h3>
+                        <ul>
+                        	<li>Gnu Privacy Guard aka GPG</li>
+                        	<li>(True|Vera)Crypt</li>
+                        </ul>
+                    </section>
+                    <section>
+                    	<h3>Rotina de backup</h3>
+                        <ul>
+                        	<li>Cron + Tar ...</li>
+                        	<li>Bacula</li>
+                        </ul>
+                    </section>
+                    <section>
+                    	<h3>Onde guardar o backup?</h3>
+                        <p>Arquivos de configuração => Git</p>
+                        <ul>
+                        	<li>Gitlab</li>
+                        	<li>Bitbucket</li>
+                        	<li>Github</li>
+                        </ul>
+                    </section>
+                    <section>
+                    	<h3>Onde guardar o backup?</h3>
+                        <p>Soluções "faça você mesmo"</p>
+                        <ul>
+                        	<li>HD Externo</li>
+                        	<li>OwnCloud</li>
+                                <ul>
+                                	<li>Cloud</li>
+                                	<li>Rasp</li>
+                                </ul>
+                        </ul>
+                    </section>
+                    <section>
+                    	<h3>Onde guardar o backup?</h3>
+                        <p>Soluções terceirizadas</p>
+                        <ul>
+                        	<li>MEO Cloud</li>
+                        	<li>Mega</li>
+                        	<li>Dropbox</li>
+                        	<li>Google Drive</li>
+                        	<li>Amazon AWS</li>
+                        </ul>
+                    </section>
+                    <section>
+                    	<h3>Checagem</h3>
+                        <ul>
+                        	<li>md*sum</li>
+                        	<li>sha*sum</li>
+                        	<li>Assinatura GPG</li>
+                        </ul>
+                    </section>
                 </section>
                 <section>
                 	<section>
