Pequenas correções e incrementos

--- a/DNS-o-que-voce-precisa-saber/index.html
+++ b/DNS-o-que-voce-precisa-saber/index.html
@@ -40,7 +40,7 @@
 					<h1>DNS</h1>
 					<h2>O que você precisa saber</h2>
 					<br /></br />
-					<a href="https://github.com/gjuniioor">gjuniioor</a>
+					<a href="https://gildasio.gitlab.io">Gildásio Júnior</a>
 				</section>
 				<section>
 						<section>
@@ -87,10 +87,10 @@
 						<h2>Servidores</h2>
 						<ul>
 							<li class="fragment"><a href="http://www.root-servers.org" target="_blank">Root</a></li>
-							<li class="fragment">TLD
+							<li class="fragment">TLD (<i>Top Level Domain</i>)
 								<ul>
-									<li class="fragment">gTLD - (generic)</li>
-									<li class="fragment">ccTLD - (country code)</li>
+									<li class="fragment">gTLD - (<i>generic</i>)</li>
+									<li class="fragment">ccTLD - (<i>country code</i>)</li>
 								</ul>
 							</li>
 							<li class="fragment">Autoritativos</li>
@@ -246,6 +246,7 @@ fred   IN  A      192.168.0.4</code></pre>
 							<li>GTER 36, Rafael Justo</li>
 						</ul></li>
 						<li>Livros<ul>
+							<li>Redes de Computadores e a Internet, Kurose & Ross</li>
 							<li>Redes: Guia Prático, Carlos E. Morimoto</li>
 							<li>Redes de Computadores, Andrew S. Tanenbaum</li>
 							<li>DNS for Rockets Scientists, Zytrax</li>
